--- a/BloggoFrontend/pages/members.html
+++ b/BloggoFrontend/pages/members.html
@@ -2,9 +2,139 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title id="title"></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <link href="../css/members.css" rel="stylesheet">
 </head>
 <body>
+<header class="sticky-top">
+    <nav class="glass-navbar align-items-center">
+        <h1 class="navbar-brand" href="#" aria-label="Bloggo Home">BLOGGO</h1>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <a href="dashboard.html"><i class="fas fa-home me-1"></i> Home</a>
+        <a href="notification.html"><i class="fas fa-bell me-1"></i> Notifications</a>
+        <a href="blog-editor.html"><i class="fas fa-pen me-1"></i> Write</a>
+
+
+        <!-- User Profile Menu -->
+        <div class="dropdown profile-menu">
+            <a href="#" class="d-block" id="profileDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="../assets/boy%20(1).png" class="avatar" alt="Profile Avatar">
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                <li>
+                    <a class="dropdown-item" href="stories.html">
+                        <i class="fas fa-user me-2"></i> Profile
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="saved-bookmarks.html">
+                        <i class="fas fa-bookmark me-2"></i> My Library
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="membership.html">
+                        <i class="fas fa-star me-2"></i> Become a Member
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="settings.html">
+                        <i class="fas fa-cog me-2"></i> Settings
+                    </a>
+                </li>
+                <li><hr class="dropdown-divider"></li>
+                <li>
+                    <a class="dropdown-item text-danger" href="logout.html" onclick="logout()">
+                        <i class="fas fa-sign-out-alt me-2"></i> Logout
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+    </nav>
+</header>
+<div class="container mt-3">
+    <div class="row mt-3">
+        <!-- Main Feed -->
+        <div class="col-lg-8">
+            <h2 class="mb-4">Stories</h2>
+
+            <!-- Tab Content -->
+            <div class="tab-content mt-3" id="notificationTabsContent">
+                <!--&lt;!&ndash; All Tab &ndash;&gt;
+                <div class="tab-pane fade show active" id="all" role="tabpanel"></div>
+
+                &lt;!&ndash; Mentions Tab &ndash;&gt;
+                <div class="tab-pane fade" id="mentions" role="tabpanel"></div>
+
+                &lt;!&ndash; Likes Tab &ndash;&gt;
+                <div class="tab-pane fade" id="likes" role="tabpanel"></div>-->
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <!-- Profile Card -->
+            <div class="card p-3 mb-3 text-center" id="edit-profile-card">
+                <img  class="profile-avatar mb-2" alt="Avatar">
+
+                <div class="d-flex align-items-center justify-content-center gap-2 mb-2">
+                    <h4 class="profile-name m-0">Sasuniwijerathne</h4>
+                    <small class="text-muted">she/her</small>
+                </div>
+
+                <p>
+                    <a href="follow.html" class="text-decoration-none fw-semibold">71 Followers</a>
+                </p>
+
+                <p class="profile-bio">
+                    Just a 21+ girl navigating life with passion and purpose! ✨
+                </p>
+
+                <!-- Follow / Unfollow Button -->
+                <button id="followBtn" class="btn btn-sm btn-primary">
+                    <i class="fas fa-user-plus me-1"></i> Follow
+                </button>
+
+            </div>
+
+            <!-- More people to flw -->
+            <div class="card p-3 mb-3">
+                <h6 class="mb-3">More People to Follow</h6>
+                <ul class="list-unstyled following-list mb-0">
+                    <li class="d-flex align-items-center mb-2">
+                        <img  class="rounded-circle me-2" alt="">
+                        <span>test1</span>
+                    </li>
+                    <li class="d-flex align-items-center mb-2">
+                        <img  class="rounded-circle me-2" alt="">
+                        <span>test2</span>
+                    </li>
+                    <li class="d-flex align-items-center mb-2">
+                        <img  class="rounded-circle me-2" alt="">
+                        <span>test3</span>
+                    </li>
+                    <li>
+                        <a href="follow.html" class="text-decoration-none">more</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../js/members.js"> </script>
+<script src="../js/profile.js"></script>
 
 </body>
 </html>
