--- a/BloggoFrontend/pages/stories.html
+++ b/BloggoFrontend/pages/stories.html
@@ -78,10 +78,10 @@
 
             <!-- Tab Content -->
             <div class="nav nav-tabs" id="myStories">
-                <div class="tab-pane fade show active" id="draft" role="tabpanel"></div>
+                <!--<div class="tab-pane fade show active" id="draft" role="tabpanel"></div>
                 <div class="tab-pane fade" id="published" role="tabpanel"></div>
                 <div class="tab-pane fade" id="archived" role="tabpanel"></div>
-                <div class="tab-pane fade" id="scheduled" role="tabpanel"></div>
+                <div class="tab-pane fade" id="scheduled" role="tabpanel"></div>-->
             </div>
         </div>
 
