Added boost functionality and updated post DTO.

--- a/BloggoFrontend/pages/story-detail.html
+++ b/BloggoFrontend/pages/story-detail.html
@@ -105,7 +105,7 @@
                 <div class="interactions">
                     <button class="interaction-btn boost-btn" id="boostBtn">
                         <i class="fas fa-rocket"></i>
-                        <span id="boostCount">0</span> Boosts
+                        <span id="boostCount">0</span>
                     </button>
                     <button class="interaction-btn bookmark-btn" id="bookmarkBtn">
                         <i class="far fa-bookmark"></i> Save
