--- a/BloggoFrontend/pages/saved-bookmarks.html
+++ b/BloggoFrontend/pages/saved-bookmarks.html
@@ -81,30 +81,7 @@
             <div class="tab-content mt-3" id="notificationTabsContent">
                 <!-- All Tab -->
                 <div class="tab-pane fade show active" id="all" role="tabpanel">
-                    <div class="card p-3 mb-2">
-                        <strong>@alex</strong> liked your post <em>"Spring Boot Guide"</em>.
-                        <small class="text-muted d-block">2h ago</small>
-                    </div>
-                    <div class="card p-3 mb-2">
-                        <strong>@susan</strong> mentioned you in a comment.
-                        <small class="text-muted d-block">5h ago</small>
-                    </div>
-                </div>
 
-                <!-- Mentions Tab -->
-                <div class="tab-pane fade" id="mentions" role="tabpanel">
-                    <div class="card p-3 mb-2">
-                        <strong>@susan</strong> mentioned you: <em>"Check out @sasuniwijerathne’s blog!"</em>
-                        <small class="text-muted d-block">5h ago</small>
-                    </div>
-                </div>
-
-                <!-- Likes Tab -->
-                <div class="tab-pane fade" id="likes" role="tabpanel">
-                    <div class="card p-3 mb-2">
-                        <strong>@alex</strong> liked your post <em>"Spring Boot Guide"</em>.
-                        <small class="text-muted d-block">2h ago</small>
-                    </div>
                 </div>
             </div>
         </div>
@@ -159,5 +136,6 @@
 <!-- Bootstrap Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../js/profile.js"></script>
+<script src="../js/bookmark.js"></script>
 </body>
 </html>
