--- a/BloggoFrontend/pages/dashboard.html
+++ b/BloggoFrontend/pages/dashboard.html
@@ -90,13 +90,14 @@
 
     <!-- Sidebar -->
     <aside class="sidebar">
-        <a href="dashboard.html">🏠 Home</a>
-        <a href="profile.html">✍ My Blogs</a>
-        <a href="saved-bookmarks.html">🔖 Saved</a>
-        <a href="about-bloggo.html">🌍 Explore</a>
-        <a href="notification.html">🔔 Notifications</a>
-        <a href="settings.html">⚙ Settings</a>
+        <a href="dashboard.html"><i class="fas fa-home"></i> Home</a>
+        <a href="profile.html"><i class="fas fa-pen"></i> My Blogs</a>
+        <a href="saved-bookmarks.html"><i class="fas fa-bookmark"></i> Saved</a>
+        <a href="about-bloggo.html"><i class="fas fa-globe"></i> Explore</a>
+        <a href="notification.html"><i class="fas fa-bell"></i> Notifications</a>
+        <a href="settings.html"><i class="fas fa-cog"></i> Settings</a>
     </aside>
+
 
     <!-- Feed -->
     <section class="feed">
@@ -129,22 +130,23 @@
     <aside class="rightbar">
         <!-- People to Follow -->
         <div class="card p-3 mb-3 shadow-sm rounded">
-            <h4 class="mb-3">👥 People to Follow</h4>
+            <h4 class="mb-3"><i class="fas fa-users me-2"></i>People to Follow</h4>
             <ul id="userList" class="list-unstyled">
                 <!-- Users will be loaded here -->
             </ul>
-            <a href="members.html" class="browse-link">Browse more →</a>
+            <a href="members.html" class="browse-link">Browse more <i class="fas fa-arrow-right ms-1"></i></a>
         </div>
 
         <!-- Trending Tags -->
         <div class="card p-3 shadow-sm rounded">
-            <h4 class="mb-3">🔥 Trending Tags</h4>
+            <h4 class="mb-3"><i class="fas fa-fire me-2"></i>Trending Tags</h4>
             <ul id="tagList" class="list-unstyled">
                 <!-- Tags will be loaded here -->
             </ul>
-            <a href="javascript:void(0)" class="browse-link" id="loadMoreTags">Load more...</a>
+            <a href="javascript:void(0)" class="browse-link" id="loadMoreTags">Load more <i class="fas fa-arrow-down ms-1"></i></a>
         </div>
     </aside>
+
 
 
 </main>
