Implement notification service with CRUD operations and update UI for notifications

--- a/BloggoFrontend/pages/about-bloggo.html
+++ b/BloggoFrontend/pages/about-bloggo.html
@@ -22,7 +22,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <a href="about-bloggo.html"><i class="fas fa-home me-1"></i> Home</a>
+        <a href="dashboard.html"><i class="fas fa-home me-1"></i> Home</a>
         <a href="notification.html"><i class="fas fa-bell me-1"></i> Notifications</a>
         <a href="blog-editor.html"><i class="fas fa-pen me-1"></i> Write</a>
 
