Refactor styles across multiple CSS files to unify background colors and enhance UI consistency

--- a/BloggoFrontend/pages/follow.html
+++ b/BloggoFrontend/pages/follow.html
@@ -100,7 +100,7 @@
                 </div>
 
                 <!-- Followers Tab -->
-                <div class="tab-pane fade" id="followers">
+                <div class="tab-pane fade" id="followers" >
                     <div class="user-card">
                         <h6>@alex_reader</h6>
                         <p>Loves tech blogs · 10 comments</p>
@@ -123,10 +123,12 @@
                 </div>
                 <p>71 Followers</p>
                 <p class="profile-bio">Just a 21+ girl navigating life with passion and purpose! ✨</p>
-                <a href="../pages/profile-edit.html" class="edit-profile">Edit profile</a>
+                <a href="../pages/profile-edit.html" class="btn btn-sm btn" style="background: black; color: white" >
+                    Edit profile
+                </a>
             </div>
 
-            <div class="card p-3 mb-3">
+            <div class="card p-3 mb-3"  style="background: #f5fbff; padding: 15px; border-radius: 8px;">
                 <h6>Following</h6>
                 <ul class="list-unstyled following-list">
                     <li class="d-flex align-items-center mb-2"><img src="https://via.placeholder.com/30" alt=""> test1</li>
