--- a/BloggoFrontend/pages/saved-bookmarks.html
+++ b/BloggoFrontend/pages/saved-bookmarks.html
@@ -104,13 +104,13 @@
                     Just a 21+ girl navigating life with passion and purpose! ✨
                 </p>
 
-                <a href="../pages/profile-edit.html" class="btn btn-sm btn-outline-primary">
+                <a href="../pages/profile-edit.html" class="btn btn-sm btn" style="background: black; color: white" >
                     Edit profile
                 </a>
             </div>
 
             <!-- Following List -->
-            <div class="card p-3 mb-3">
+            <div class="card p-3 mb-3" style="background: #f5fbff">
                 <h6 class="mb-3">Following</h6>
                 <ul class="list-unstyled following-list mb-0">
                     <li class="d-flex align-items-center mb-2">
