Implement PayPal and PayHere payment integration with corresponding services, controllers, and frontend updates

--- a/BloggoFrontend/pages/membership.html
+++ b/BloggoFrontend/pages/membership.html
@@ -95,7 +95,8 @@
                     <li>✔ Advanced analytics</li>
                     <li>✔ Priority support</li>
                 </ul>
-                <a href="payment.html" class="btn btn-plan">Upgrade</a>
+                <a href="payment.html?plan=premium&amount=5" class="btn btn-plan">Upgrade</a>
+
             </div>
         </div>
 
