--- a/BloggoFrontend/pages/payment.html
+++ b/BloggoFrontend/pages/payment.html
@@ -63,16 +63,42 @@
         </div>
     </nav>
 </header>
+<button id="payhere-payment">Pay with PayHere</button>
 
-<div class="container my-4">
-    <div class="card shadow-sm p-4 text-center">
-        <h3 class="mb-3">💳 Pay with PayPal</h3>
-        <p class="text-muted">Click below to complete your payment securely with PayPal</p>
+<!--
 
-        <!-- PayPal button -->
-        <div id="paypal-button-container">Checkout</div>
+<form method="post" action="http://localhost:8080/api/v1/payment/create" class="mt-5 card p-3">
+    <div class="mb-3">
+        <label for="method" class="form-label">Payment Method</label>
+        <input id="method" name="method" type="text" class="form-control" value="PayPal" readonly>
     </div>
-</div>
+
+    <div class="mb-3">
+        <label for="amount" class="form-label">Amount</label>
+        <input id="amount" name="amount" type="number" step="0.01" class="form-control" value="10.0">
+    </div>
+
+    <div class="mb-3">
+        <label for="currency" class="form-label">Currency</label>
+        <select class="form-control" id="currency" name="currency">
+            <option value="USD" selected>USD</option>
+            <option value="LKR">LKR</option>
+            <option value="EUR">EUR</option>
+            <option value="GBP">GBP</option>
+        </select>
+    </div>
+
+    <div class="mb-3">
+        <label for="description" class="form-label">Description</label>
+        <input id="description" name="description" type="text" class="form-control">
+    </div>
+
+    <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-primary">Pay with PayPal</button>
+    </div>
+</form>
+-->
+
 
 <!-- Checkout Progress -->
 <div class="checkout-steps">
@@ -90,11 +116,61 @@
 <div class="container text-center mb-5">
     <p class="text-muted">Secure checkout process — your data is protected 🔒</p>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
 <script src="../js/payment.js"></script>
-<script src="https://www.paypal.com/sdk/js?client-id=YOUR_CLIENT_ID&currency=USD"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="https://www.payhere.lk/lib/payhere.js"></script>
 
 
+<script>
+    // PayHere event handlers
+    payhere.onCompleted = function(orderId) {
+        console.log("✅ Payment completed. OrderID: " + orderId);
+    };
+
+    payhere.onDismissed = function() {
+        console.log("❌ Payment dismissed");
+    };
+
+    payhere.onError = function(error) {
+        console.log("⚠️ Error: " + error);
+    };
+
+    document.getElementById('payhere-payment').onclick = async function () {
+        const orderId = "ORDER123";
+        const amount = 1000.00;
+        const currency = "LKR";
+
+        // 1️⃣ Fetch secure hash from backend
+        const res = await fetch("http://localhost:8080/api/v1/payments/generate-hash?orderId="
+            + orderId + "&amount=" + amount + "&currency=" + currency, {
+            method: "POST"
+        });
+        const hash = await res.text();
+
+        // 2️⃣ Build payment object
+        var payment = {
+            "sandbox": true,
+            "merchant_id": "",
+            "return_url": "http://localhost:8080/api/v1/payments/success",
+            "cancel_url": "http://localhost:8080/api/v1/payments/cancel",
+            "notify_url": "http://your-public-domain.com/api/v1/payments/notify",
+            "order_id": orderId,
+            "items": "Test Product",
+            "amount": amount.toFixed(2),
+            "currency": currency,
+            "hash": hash,
+            "first_name": "Sasuni",
+            "last_name": "Wijerathne",
+            "email": "sasuni@example.com",
+            "phone": "0712345678",
+            "address": "Colombo",
+            "city": "Colombo",
+            "country": "Sri Lanka"
+        };
+
+        // 3️⃣ Start PayHere popup
+        payhere.startPayment(payment);
+    };
+</script>
 </body>
 </html>
