--- a/BloggoFrontend/pages/payment.html
+++ b/BloggoFrontend/pages/payment.html
@@ -83,7 +83,7 @@
         <h3 class="fw-bold mb-4">$5 / month</h3>
 
         <!-- CTA Button -->
-        <button id="payhere-membership" class="btn btn-primary btn-lg w-100 shadow-sm">
+        <button id="payhere-payment" class="btn btn-primary btn-lg w-100 shadow-sm">
             <i class="fas fa-credit-card me-2"></i> Pay with PayHere
         </button>
 
@@ -108,64 +108,10 @@
 <div class="container text-center mb-5">
     <p class="text-muted">Secure checkout process — your data is protected 🔒</p>
 </div>
-<script src="../js/payment.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" src="https://www.payhere.lk/lib/payhere.js"></script>
 
+<script src="../js/payment.js"></script>
 
-<script>
-    // PayHere event handlers
-    payhere.onCompleted = function(orderId) {
-        console.log("✅ Payment completed. OrderID: " + orderId);
-        alert("Payment completed. OrderID: " + orderId);
-        window.location.href = "stories.html";
-    };
-
-    payhere.onDismissed = function() {
-        console.log("❌ Payment dismissed");
-
-    };
-
-    payhere.onError = function(error) {
-        console.log("⚠️ Error: " + error);
-    };
-
-    document.getElementById('payhere-payment').onclick = async function () {
-        const orderId = "ORDER123";
-        const amount = 1500.00;
-        const currency = "LKR";
-
-        // 1️⃣ Fetch secure hash from backend
-        const res = await fetch("http://localhost:8080/api/v1/payments/generate-hash?orderId="
-            + orderId + "&amount=" + amount + "&currency=" + currency, {
-            method: "POST"
-        });
-        const hash = await res.text();
-
-        // 2️⃣ Build payment object
-        var payment = {
-            "sandbox": true,
-            "merchant_id": "",
-            "return_url": "http://localhost:8080/api/v1/payments/success",
-            "cancel_url": "http://localhost:8080/api/v1/payments/cancel",
-            "notify_url": "http://your-public-domain.com/api/v1/payments/notify",
-            "order_id": orderId,
-            "items": "Test Product",
-            "amount": amount.toFixed(2),
-            "currency": currency,
-            "hash": hash,
-            "first_name": "Sasuni",
-            "last_name": "Wijerathne",
-            "email": "sasuni@example.com",
-            "phone": "0712345678",
-            "address": "Colombo",
-            "city": "Colombo",
-            "country": "Sri Lanka"
-        };
-
-        // 3️⃣ Start PayHere popup
-        payhere.startPayment(payment);
-    };
-</script>
 </body>
 </html>
