--- a/BloggoFrontend/pages/notification.html
+++ b/BloggoFrontend/pages/notification.html
@@ -82,6 +82,7 @@
             </div>
         </div>
 
+        <!-- Sidebar -->
         <div class="col-lg-4">
             <!-- Profile Card -->
             <div class="card p-3 mb-3 text-center" id="edit-profile-card">
@@ -100,9 +101,25 @@
                     Just a 21+ girl navigating life with passion and purpose! ✨
                 </p>
 
-                <a href="../pages/profile-edit.html" class="btn btn-sm btn-outline-primary">
-                    Edit profile
-                </a>
+                <!-- Wallet & Earnings Inline -->
+                <div class="d-flex gap-3 mb-3">
+                    <div class="wallet flex-fill p-3 bg-light rounded d-flex align-items-center justify-content-between">
+                        <div>
+                            <h6 class="mb-1"><i class="fas fa-wallet me-2 text-primary"></i> Wallet</h6>
+                            <p class="fw-bold mb-0">LKR 2,500.00</p>
+                        </div>
+                    </div>
+
+                    <div class="earnings flex-fill p-3 bg-light rounded d-flex align-items-center justify-content-between">
+                        <div>
+                            <h6 class="mb-1"><i class="fas fa-chart-line me-2 text-success"></i> Earnings</h6>
+                            <p class="fw-bold mb-0">LKR 1,200.00</p>
+                        </div>
+                    </div>
+                </div>
+
+                <a href="settings.html" class="btn btn-secondary btn-sm w-100 mt-2" style="background: black; color: white">Edit profile</a>
+
             </div>
 
             <!-- Following List -->
