--- a/BloggoFrontend/pages/members.html
+++ b/BloggoFrontend/pages/members.html
@@ -81,6 +81,7 @@
             </div>
         </div>
 
+        <!-- Sidebar -->
         <div class="col-lg-4">
             <!-- Profile Card -->
             <div class="card p-3 mb-3 text-center" id="edit-profile-card">
@@ -99,16 +100,30 @@
                     Just a 21+ girl navigating life with passion and purpose! ✨
                 </p>
 
-                <!-- Follow / Unfollow Button -->
-                <button id="followBtn" class="btn btn-sm btn-primary">
-                    <i class="fas fa-user-plus me-1"></i> Follow
-                </button>
+                <!-- Wallet & Earnings Inline -->
+                <div class="d-flex gap-3 mb-3">
+                    <div class="wallet flex-fill p-3 bg-light rounded d-flex align-items-center justify-content-between">
+                        <div>
+                            <h6 class="mb-1"><i class="fas fa-wallet me-2 text-primary"></i> Wallet</h6>
+                            <p class="fw-bold mb-0">LKR 2,500.00</p>
+                        </div>
+                    </div>
+
+                    <div class="earnings flex-fill p-3 bg-light rounded d-flex align-items-center justify-content-between">
+                        <div>
+                            <h6 class="mb-1"><i class="fas fa-chart-line me-2 text-success"></i> Earnings</h6>
+                            <p class="fw-bold mb-0">LKR 1,200.00</p>
+                        </div>
+                    </div>
+                </div>
+
+                <a class="btn btn-secondary btn-sm w-100 mt-2" style="background: black; color: white">Follow</a>
 
             </div>
 
-            <!-- More people to flw -->
+            <!-- Following List -->
             <div class="card p-3 mb-3">
-                <h6 class="mb-3">More People to Follow</h6>
+                <h6 class="mb-3">Following</h6>
                 <ul class="list-unstyled following-list mb-0">
                     <li class="d-flex align-items-center mb-2">
                         <img  class="rounded-circle me-2" alt="">
@@ -123,7 +138,7 @@
                         <span>test3</span>
                     </li>
                     <li>
-                        <a href="follow.html" class="text-decoration-none">more</a>
+                        <a href="follow.html" class="text-decoration-none">See all (12)</a>
                     </li>
                 </ul>
             </div>
