--- a/BloggoFrontend/pages/stories.html
+++ b/BloggoFrontend/pages/stories.html
@@ -105,7 +105,7 @@
                     Just a 21+ girl navigating life with passion and purpose! ✨
                 </p>
 
-                <!-- Wallet & Earnings Inline -->
+               <!-- &lt;!&ndash; Wallet & Earnings Inline &ndash;&gt;
                 <div class="d-flex gap-3 mb-3">
                     <div class="wallet flex-fill p-3 bg-light rounded d-flex align-items-center justify-content-between">
                         <div>
@@ -120,7 +120,7 @@
                             <p class="fw-bold mb-0">LKR 1,200.00</p>
                         </div>
                     </div>
-                </div>
+                </div>-->
 
                 <a href="settings.html" class="btn btn-secondary btn-sm w-100 mt-2" style="background: black; color: white">Edit profile</a>
 
@@ -150,7 +150,6 @@
         </div>
     </div>
 </div>
-<script src="../js/profile.js"></script>
 
 <script src="../js/stories.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
